--- a/backend/views/sub/navbar.ejs
+++ b/backend/views/sub/navbar.ejs
@@ -5,10 +5,10 @@
 </div>
 <div class="mt-[3rem]">
     <ul class="flex flex-col gap-5">
-        <li class="hover:bg-black hover:text-white p-3"><a href="/" class="flex items-center gap-2">
+        <!-- <li class="hover:bg-black hover:text-white p-3"><a href="/" class="flex items-center gap-2">
                 <span class="material-symbols-outlined">dashboard_customize</span>
                 <span class="font-semibold text-base">Dashboard</span>
-            </a></li>
+            </a></li> -->
         <li class="hover:bg-black hover:text-white p-3"><a href="/attendance" class="flex items-center gap-2">
                 <span class="material-symbols-outlined">how_to_reg</span>
                 <span class="font-semibold text-base">Attendance</span>
