--- a/backend/public/css/output.css
+++ b/backend/public/css/output.css
@@ -562,6 +562,10 @@ video {
   position: sticky;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .bottom-5 {
   bottom: 1.25rem;
 }
@@ -570,13 +574,26 @@ video {
   left: 0px;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .top-0 {
   top: 0px;
+}
+
+.m-10 {
+  margin: 2.5rem;
 }
 
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
+}
+
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
 }
 
 .mx-5 {
@@ -596,6 +613,10 @@ video {
   margin-left: auto;
 }
 
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -608,6 +629,10 @@ video {
   margin-top: 3rem;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
 }
@@ -616,8 +641,16 @@ video {
   display: table;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-\[18rem\] {
   height: 18rem;
+}
+
+.h-\[1rem\] {
+  height: 1rem;
 }
 
 .h-\[20rem\] {
@@ -632,12 +665,40 @@ video {
   height: 30rem;
 }
 
+.h-\[32rem\] {
+  height: 32rem;
+}
+
+.h-\[35rem\] {
+  height: 35rem;
+}
+
+.h-\[6rem\] {
+  height: 6rem;
+}
+
+.h-\[80\%\] {
+  height: 80%;
+}
+
+.h-\[8rem\] {
+  height: 8rem;
+}
+
+.h-\[90\%\] {
+  height: 90%;
+}
+
 .h-full {
   height: 100%;
 }
 
 .h-screen {
   height: 100vh;
+}
+
+.w-\[100\%\] {
+  width: 100%;
 }
 
 .w-\[10rem\] {
@@ -648,28 +709,64 @@ video {
   width: 15%;
 }
 
+.w-\[1rem\] {
+  width: 1rem;
+}
+
 .w-\[20rem\] {
   width: 20rem;
+}
+
+.w-\[23rem\] {
+  width: 23rem;
+}
+
+.w-\[30rem\] {
+  width: 30rem;
+}
+
+.w-\[39\%\] {
+  width: 39%;
+}
+
+.w-\[40rem\] {
+  width: 40rem;
 }
 
 .w-\[4rem\] {
   width: 4rem;
 }
 
+.w-\[6rem\] {
+  width: 6rem;
+}
+
 .w-\[80vw\] {
   width: 80vw;
+}
+
+.w-\[85vw\] {
+  width: 85vw;
+}
+
+.w-\[8rem\] {
+  width: 8rem;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .w-\[95\%\] {
   width: 95%;
 }
 
-.w-full {
-  width: 100%;
+.w-\[98\%\] {
+  width: 98%;
 }
 
-.w-\[8rem\] {
-  width: 8rem;
+.w-full {
+  width: 100%;
 }
 
 .min-w-\[280px\] {
@@ -692,6 +789,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-end {
   align-items: flex-end;
 }
@@ -700,12 +801,20 @@ video {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-center {
   justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .justify-evenly {
@@ -728,12 +837,28 @@ video {
   gap: 1.25rem;
 }
 
+.self-end {
+  align-self: flex-end;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
 .overflow-x-scroll {
   overflow-x: scroll;
 }
 
 .overflow-y-scroll {
   overflow-y: scroll;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .rounded-lg {
@@ -748,8 +873,17 @@ video {
   border-width: 2px;
 }
 
+.border-\[1px\] {
+  border-width: 1px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
+}
+
+.border-\[\#1a40db\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(26 64 219 / var(--tw-border-opacity));
 }
 
 .border-\[\#2254ee\] {
@@ -762,6 +896,11 @@ video {
   border-color: rgb(218 232 255 / var(--tw-border-opacity));
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .bg-\[\#2254ee\] {
   --tw-bg-opacity: 1;
   background-color: rgb(34 84 238 / var(--tw-bg-opacity));
@@ -770,6 +909,11 @@ video {
 .bg-\[\#dae8ff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(218 232 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#dfefff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(223 239 255 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#e0e4ff\] {
@@ -782,9 +926,18 @@ video {
   background-color: rgb(239 245 255 / var(--tw-bg-opacity));
 }
 
+.bg-red-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-2 {
@@ -807,14 +960,33 @@ video {
   padding: 2rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-\[3rem\] {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .pb-6 {
@@ -876,9 +1048,19 @@ video {
   font-weight: 600;
 }
 
+.text-\[\#044f88\] {
+  --tw-text-opacity: 1;
+  color: rgb(4 79 136 / var(--tw-text-opacity));
+}
+
 .text-\[\#162055\] {
   --tw-text-opacity: 1;
   color: rgb(22 32 85 / var(--tw-text-opacity));
+}
+
+.text-\[\#1a40db\] {
+  --tw-text-opacity: 1;
+  color: rgb(26 64 219 / var(--tw-text-opacity));
 }
 
 .text-\[\#1c318c\] {
@@ -916,6 +1098,16 @@ video {
   color: rgb(119 82 254 / var(--tw-text-opacity));
 }
 
+.text-blue-800 {
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity));
+}
+
+.text-blue-900 {
+  --tw-text-opacity: 1;
+  color: rgb(30 58 138 / var(--tw-text-opacity));
+}
+
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
@@ -924,6 +1116,12 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:bg-\[\#c2d9ff\]:hover {
@@ -936,9 +1134,9 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-blue-300:hover {
+.hover\:bg-blue-100:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-blue-200:hover {
@@ -946,14 +1144,18 @@ video {
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-blue-100:hover {
+.hover\:bg-blue-300:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-blue-500:hover {
+.hover\:bg-red-200:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white\/60:hover {
+  background-color: rgb(255 255 255 / 0.6);
 }
 
 .hover\:text-blue-200:hover {
@@ -961,9 +1163,19 @@ video {
   color: rgb(191 219 254 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-300:hover {
+  --tw-text-opacity: 1;
+  color: rgb(147 197 253 / var(--tw-text-opacity));
+}
+
 .hover\:text-red-200:hover {
   --tw-text-opacity: 1;
   color: rgb(254 202 202 / var(--tw-text-opacity));
+}
+
+.hover\:text-red-300:hover {
+  --tw-text-opacity: 1;
+  color: rgb(252 165 165 / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover {
