--- a/backend/views/main/addStudents.ejs
+++ b/backend/views/main/addStudents.ejs
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="/output.css">
-    <link rel="stylesheet" href="/css/addStud.css">
+    <link rel="stylesheet" href="/css/output.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Document</title>
 </head>
@@ -25,10 +24,11 @@
                         <div>
                             <select id="select-dep" class="bg-[#dae8ff] p-2 text-[#2254ee] rounded-lg font-semibold ml-5">
                                 <option value="">select department</option>
-                                <option value="BCA">BCA</option>
-                                <option value="BBA">BBA</option>
-                                <option value="BCOM">BCOM</option>
-                                <option value="BSC">BSC</option>
+                                <% departments.currentSession?.forEach((dep)=> { %>
+                                    <option value="<%= dep.department %>">
+                                        <%= dep.department %>
+                                    </option>
+                                <% }) %>
                             </select>
                         </div>
                         <div>
@@ -85,6 +85,7 @@
             </section>
     </main>
     <script src="/js/module/module.js"></script>
+    <script src="/js/common.js"></script>
     <script src="/js/addStud.js"></script>
 </body>
 
