--- a/backend/views/main/addSubjects.ejs
+++ b/backend/views/main/addSubjects.ejs
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="/output.css">
-    <link rel="stylesheet" href="/css/addsub.css">
+    <link rel="stylesheet" href="/css/output.css">
     <title>Document</title>
 </head>
 
@@ -24,10 +23,11 @@
                     <div>
                         <select id="select-dep" class="bg-[#dae8ff] p-2 text-[#2254ee] rounded-lg font-semibold ml-5">
                             <option value="">select department</option>
-                                <option value="BCA">BCA</option>
-                                <option value="BBA">BBA</option>
-                                <option value="BCOM">BCOM</option>
-                                <option value="BSC">BSC</option>
+                            <% departments.currentSession?.forEach((dep)=> { %>
+                                <option value="<%= dep.department %>">
+                                    <%= dep.department %>
+                                </option>
+                            <% }) %>
                         </select>
                     </div>
                     <div>
