--- a/backend/views/main/createAttendance.ejs
+++ b/backend/views/main/createAttendance.ejs
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="/output.css">
-    <link rel="stylesheet" href="/css/createAttendance.css">
+    <link rel="stylesheet" href="/css/output.css">
     <title>Document</title>
 </head>
 
@@ -22,10 +21,11 @@
                     <div class="">
                         <select id="select-dep" class="bg-[#dae8ff] p-2 text-[#2254ee] rounded-lg font-semibold ml-5">
                             <option value="">select department</option>
-                            <option value="bca">BCA</option>
-                            <option value="bba">BBA</option>
-                            <option value="bcom">BCOM</option>
-                            <option value="bsc">BSC</option>
+                            <% departments.currentSession?.forEach((dep)=> { %>
+                                <option value="<%= dep.department %>">
+                                    <%= dep.department %>
+                                </option>
+                            <% }) %>
                         </select>
                         <select id="select-sem" class="bg-[#dae8ff] p-2 text-[#2254ee] rounded-lg font-semibold ml-5">
                             <option value="">select semester</option>
