--- a/backend/views/main/departmentAnalyse.ejs
+++ b/backend/views/main/departmentAnalyse.ejs
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="/output.css">
-    <link rel="stylesheet" href="/css/depAnalyse.css">
+    <link rel="stylesheet" href="/css/output.css">
     <link rel="stylesheet" href="/extra.css">
     <link rel="stylesheet" href="/css/studentExtra.css">
     <title>Document</title>
@@ -39,11 +38,11 @@
                         <div><h2 class="text-2xl font-bold">Department Analytics</h2></div>
                         <div class="w-[100%] flex gap-10 mt-10 flex-wrap items-center justify-start">
                             <% sendData?.currentSession.forEach((el)=> { %>
-                                <div class="hover:bg-blue-100 w-[23rem] h-[8rem] flex items-center justify-center border-2 border-[#2254ee] rounded-lg">
+                            <a href="/analysis/<%= el.department %>" class="hover:bg-blue-100 w-[23rem] h-[8rem] flex items-center justify-center border-2 border-[#2254ee] rounded-lg">
                                     <div class="shadow-2xl flex items-center justify-center bg-[#2254ee] w-[6rem] h-[6rem] rounded-full">
-                                        <h3 class="text-xl font-bold text-white"><%= el.department %></h3>
+                                            <h3 class="text-xl font-bold text-white"><%= el.department %></h3>
                                     </div>
-                                </div>
+                            </a>
                             <% }) %>
                            
                             
