--- a/backend/views/main/students.ejs
+++ b/backend/views/main/students.ejs
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="/output.css">
-    <link rel="stylesheet" href="/css/student.css">
+    <link rel="stylesheet" href="/css/output.css">
     <link rel="stylesheet" href="/css/studentExtra.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Document</title>
@@ -65,8 +64,7 @@
                                 <tr>
                                     <th class="p-[1rem] border-collapse text-left">rollno.</th>
                                     <th class="p-[1rem] border-collapse text-left">name</th>
-                                    <th class="p-[1rem] border-collapse text-left">department</th>
-                                    <th class="p-[1rem] border-collapse text-left">semester</th>
+                                    <th class="p-[1rem] border-collapse text-left">department</th>                            
                                     <th class="p-[1rem] border-collapse text-left">year</th>
                                 </tr>
                             </thead>
@@ -79,10 +77,9 @@
                                         <td class="p-[1rem] border-collapse text-left" id="<%= stud._id %>">
                                             <%= stud.name %>
                                         </td>
-                                        <td class="p-[1rem] border-collapse text-left">BCA</td>
-                                        <td class="p-[1rem] border-collapse text-left">1st sem</td>
+                                        <td class="p-[1rem] border-collapse text-left"><%= stud.department %></td>                             
                                         <td class="p-[1rem] border-collapse text-left flex items-center gap-3">
-                                            <span>2023</span> <span
+                                            <span><%= stud.year %></span> <span
                                                 class="material-symbols-outlined text-2xl">edit_note</span>
                                         </td>
                                     </tr>
