page title added

--- a/backend/views/main/analytics.ejs
+++ b/backend/views/main/analytics.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/extra.css">
     <link rel="stylesheet" href="/css/studentExtra.css">
     <link rel="stylesheet" href="/extra.css">
-    <title>Document</title>
+    <title>Analytics</title>
 </head>
 
 <body onload="getAttendanceData('month')">
