--- a/backend/views/main/index.ejs
+++ b/backend/views/main/index.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/output.css">
     <link rel="stylesheet" href="/extra.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <title>Document</title>
+    <title>Attendance system</title>
 </head>
 
 <body>
