--- a/backend/views/main/createAttendance.ejs
+++ b/backend/views/main/createAttendance.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/css/output.css">
-    <title>Document</title>
+    <title>Create sheet</title>
 </head>
 
 <body>
