--- a/backend/views/main/departmentAnalyse.ejs
+++ b/backend/views/main/departmentAnalyse.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/output.css">
     <link rel="stylesheet" href="/extra.css">
     <link rel="stylesheet" href="/css/studentExtra.css">
-    <title>Document</title>
+    <title>Attendance data</title>
 </head>
 
 <body>
