--- a/backend/views/main/settings.ejs
+++ b/backend/views/main/settings.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/extra.css">
     <link rel="stylesheet" href="/css/studentExtra.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <title>Document</title>
+    <title>Settings</title>
 </head>
 
 <body onload="getSubjects('BCA')">
