--- a/backend/views/main/students.ejs
+++ b/backend/views/main/students.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/output.css">
     <link rel="stylesheet" href="/css/studentExtra.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <title>Document</title>
+    <title>Students</title>
 </head>
 
 <body>
